src/main/java/com/example/property_management/error/exception/InvalidCredentialsException.java
package com.example.property_management.error.exception;

public class InvalidCredentialsException extends RuntimeException {

    public InvalidCredentialsException(String message) {super(message);}
}
